# PCA

./: CMakeLists.txt  PCA  PCAdata.py  PCAgraph.py  README.md  data.csv  data2.csv  dataelv.csv  eigenvals.csv  eigenvals2.csv  eigenvects.csv  hello  main.cpp  matrix.csv  output.csv
include/: Matrix.h  PCA.h
src/: Matrix.cpp  PCA.cpp
test/: MatrixTest.cpp
